test/syntax-errors/missing-rparen-in-fncall-nested/missing-rparen-in-fncall-nested.foster
main = {
  // ANTLR wants to delete the "extraneous" token 42, rather than
  // the correct but hard-to-generate insertion of '('.
  if (prim __COMPILES__ (print_i32 42) ) )
    then ()
  end
  ;
};
